アドミンログイン-プロダクト削除までのテスト処理
